wp-content/themes/epicdarkness/style.css
/*
Theme Name: Epic Darkness
Theme URI: http://demo.agnidesigns.com/cartify
Author: AgniHD
Author URI: http://agnidesigns.com/
Description: Multipurpose WooCommerce WordPress Theme
Version: 1.0.0
template: cartify
Requires at least: 5.0
Tested up to: 5.6.1
Requires PHP: 5.6
License: GNU General Public License v2 or later
License URI: LICENSE
Text Domain: epic-darkness
Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready

*/

body,
.site-content {
    background-color: #161616;
    background: url('assets/images/bgr.jpg') no-repeat center center fixed;
    background-size: 100vw 100vh;
}

.site-header {
    position: fixed;
    width: 100%;
    top: 0;
}

.admin-bar .site-header {
    top: 32px;
}

body {
    padding-top: 104px;
}

@media (max-width: 1024px) {
    body {
        padding-top: 52px;
    }
}

.site-header-icon-cart__count {
    color: #000;
    line-height: 0;
}

/* Import Fonts */
@font-face {
    font-family: "Classica";
    src: url("assets/fonts/Classica/classica-book-webfont.woff2") format("woff2");
    font-weight: var(--cartify_font_weight_regular) var(--cartify_font_weight_primary);
    font-display: swap;
    font-style: normal;
}

@font-face {
    font-family: "Segment";
    src: url("assets/fonts/Classica/classica-book-webfont.woff2") format("woff2");
    font-weight: var(--cartify_font_weight_regular) var(--cartify_font_weight_primary);
    font-display: swap;
    font-style: normal;
}
:root {
    --cartify_color_text_primary: #e6e6e6!important;
    --cartify_color_text_body: #e6e6e6!important;
    --cartify_color_black: #000;
    --cartify_font_weight_primary: 400!important;
  }

.site-header {
    z-index: 100;
}
.site-header-main {
    background-color: rgb(0, 0, 0, 0.9)!important;
}

.site-header-menu-primary > li > a {
    font-weight: normal!important;
}

.has-bottom-left .agni-block-banner__content {
    justify-content: center!important;
}

.agni-sidecart,
.agni-sidecart__header h3,
.agni-sidecart * {
    color: var(--cartify_color_black)!important;
}

.site-header-icon-myaccount__contents {
    display: none;
}


@media (max-width: 820px) {
    .woocommerce .agni-woocommerce-account-dashboard-control li {
        width: calc(50% - 20px)!important;
    }

    body .has-x-large-font-size {
        font-size: var(--wp--preset--font-size--large)!important;
    }

}

@media (max-width: 667px) {

    footer h6 span {
        display: none;
    }

    footer .agni-block-icon-card {
        margin-bottom: 20px;
    }

    footer p {
        text-align: left!important;
    }

    footer .agni-block-1685213661026 {
        display: none;
    }

    body .has-x-large-font-size {
        font-size: var(--wp--preset--font-size--medium)!important;
    }

}

label[for="shipping_method_0_free_shipping1"] {
    display: none;
}

.product .onsale,
.product .agni-product-hot-label,
.product .agni-product-new-label,
.product .agni-product-outofstock {
    border-radius: 0!important;
    background-color: var(--cartify_color_black)!important;
    border: 0!important;
}

footer a {
    color: #919191;
}

button,
input[type=button],
input[type=reset],
input[type=submit],
.btn,
a.btn,
.woocommerce .checkout-button:hover {
    background: #fff;
    color: var(--cartify_color_black);
}

button:hover,
input[type=button]:hover,
input[type=reset]:hover,
input[type=submit]:hover,
.btn:hover,
a.btn:hover,
.woocommerce .checkout-button {
    background: var(--cartify_color_black);
    color: #fff;
}

.agni-sidecart__button--checkout{
    background: var(--cartify_color_black)!important;
}

.agni-sidecart__button--checkout{
    color: #fff!important;
}

.agni-sidecart__button--checkout:hover {
    background: #fff!important;
    color: #222!important;
}

.site-header-mobile .top-1 .left-1 .logo-0 a {
    //width: 36px;
}

.agni-block-products-nav {
    display: none;
}

input[type=text],
input[type=email],
input[type=url],
input[type=password],
input[type=search],
input[type=tel],
input[type=range],
input[type=date],
input[type=month],
input[type=week],
input[type=time],
input[type=datetime],
input[type=datetime-local],
input[type=color],
textarea,
.agni-add-to-wishlist__existing-title,
.agni-add-to-wishlist__existing-list li,
.agni-add-to-wishlist__existing-list li a,
.agni-add-to-wishlist__new-title,
.agni-cookie-consent__container,
.agni-cookie-consent__title,
.agni-add-to-wishlist-response__text,
.agni-add-to-wishlist-response__redirect-link,
.agni-wishlist-page-wishlist-settings-form,
option {
    color: var(--cartify_color_black)!important;
}

input[type=number] {
    color: #fff;
}


.agni-add-to-wishlist-form__submit,
.agni-wishlist-page-wishlist-settings-form__submit {
    background: none!important;
    color: var(--cartify_color_black)!important;
    margin-top: 20px;
}

.related.products .product-buttons,
.agni-recently-viewed-products__contents .woocommerce-loop-product__title {
    display: none;
}

.woocommerce .agni-woocommerce-account-dashboard-control li {
    width: calc(25% - 20px);
}

@media (min-width: 900px) {
   
    #sb_instagram #sbi_images {
        position: relative;
        left: 50%;
        width: 100vw;
        margin-left: -50vw;
        padding-bottom: 5px;
    }

}

.sbi_header_text {
    margin-bottom: 20px;
}

#sb_instagram .sb_instagram_header .sbi_header_text .sbi_bio {
   margin-top: 10px!important;
   width: 50%;
}

#sb_instagram #sbi_images .sbi_item {
    padding: 0 5px 5px!important;
}

